= Release notes v.2.6
